@@ -24,6 +24,10 @@
 
 - preserve last_modified when pushing a release.
 
+- address issue152: return a proper 400 "not registered" message instead
+  of 500 when a doczip is uploaded without prior registration.
+
+
 2.0.6
 ----------------
 
